# Benchmarking-MLLMs-for-Phishing-Website-Detection

phish-mllm-benchmark/phish-mllm-benchmark/: LICENSE  README.md  pyproject.toml  requirements.txt
phish-mllm-benchmark/phish-mllm-benchmark/examples/sample_dataset/: site_0001.json  site_0002.json
phish-mllm-benchmark/phish-mllm-benchmark/src/phishbench/: __init__.py  cli.py  data.py  metrics.py  prompts.py  runner.py  stats.py  util.py
phish-mllm-benchmark/phish-mllm-benchmark/src/phishbench/adapters/: base.py  llava_ov.py  phi3_vision.py  qwen2_vl.py
